--- a/index.html
+++ b/index.html
@@ -3,185 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abdellah Ennajari's CV</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f5f5f5;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1, h2, h3 {
-            color: #0056b3;
-        }
-        .header {
-            display: flex;
-            align-items: center;
-        }
-        .header img {
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-            margin-right: 20px;
-        }
-        .contact-info {
-            margin-bottom: 20px;
-        }
-        .section {
-            margin-top: 20px;
-        }
-        .section ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-        .section li {
-            margin-bottom: 10px;
-        }
-        .skills, .languages, .activities {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-        .skills div, .languages div, .activities div {
-            background-color: #e7f3fe;
-            border-radius: 5px;
-            padding: 5px 10px;
-            margin: 5px 0;
-        }
-    </style>
+    <title>Abdellah Ennajari | AI Engineer</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic">
+        <h1>Abdellah Ennajari</h1>
+        <h2>Machine Learning Engineer Intern</h2>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<div class="container">
-    <div class="header">
-        <img src="ENN.png" alt="Abdellah Ennajari">
-        <div>
-            <h1>Abdellah Ennajari</h1>
-            <h2>Machine Learning Engineer Intern</h2>
-            <div class="contact-info">
-                <p>Berkane, Morocco</p>
-                <p>Phone: <a href="tel:+212655798315">(+212) 6 5579-8315</a></p>
-                <p>Email: <a href="mailto:abdellah.ennajari.23@ump.ac.ma">abdellah.ennajari.23@ump.ac.ma</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/ennajari-abdellah">ennajari-abdellah</a></p>
-                <p>GitHub: <a href="https://github.com/ennajari">ennajari</a></p>
-            </div>
-        </div>
-    </div>
+    <main>
+        <section class="profile">
+            <h2>Profile</h2>
+            <p>Passionate Machine Learning Engineer with a solid background in mathematics and computer science, and practical expertise in deep learning and data science. Demonstrated experience in developing innovative AI solutions, particularly in machine learning and 3D image processing.</p>
+        </section>
 
-    <div class="section">
-        <h2>Profile</h2>
-        <p>Passionate Machine Learning Engineer with a solid background in mathematics and computer science, and practical expertise in deep learning and data science. Demonstrated experience in developing innovative AI solutions, particularly in machine learning and 3D image processing.</p>
-    </div>
+        <section class="education">
+            <h2>Education</h2>
+            <ul>
+                <li>2023 -- Present: National School of Artificial Intelligence and Digital, Berkane, Engineering Degree</li>
+                <li>2022 -- 2023: Ibn Zohr University, Ouarzazate, Bachelor's Degree</li>
+                <li>2021 -- 2022: Ibn Zohr University, Ouarzazate, Associate's Degree</li>
+            </ul>
+        </section>
 
-    <div class="section">
-        <h2>Education</h2>
-        <ul>
-            <li><strong>National School of Artificial Intelligence and Digital</strong> (2023 -- Present) <br> Engineering Degree</li>
-            <li><strong>Ibn Zohr University</strong> (2022 -- 2023) <br> Bachelor's Degree</li>
-            <li><strong>Ibn Zohr University</strong> (2021 -- 2022) <br> Associate's Degree</li>
-        </ul>
-    </div>
+        <section class="work-experience">
+            <h2>Work Experience</h2>
+            <ul>
+                <li>Aug 2024 -- Oct 2024: Data Science Intern at HighTech Governance Systems</li>
+                <li>Aug 2024 -- Sep 2024: AI Engineer at 3D Smart Factory</li>
+                <li>Mar 2023 -- May 2023: Full-Stack Developer at Polydisciplinary Faculty</li>
+            </ul>
+        </section>
+    </main>
 
-    <div class="section">
-        <h2>Work Experience</h2>
-        <ul>
-            <li><strong>Data Science Intern</strong> at HighTech Governance Systems (Aug 2024 -- Oct 2024)
-                <ul>
-                    <li>Developed and implemented AI solutions for analyzing complex data.</li>
-                    <li>Optimized machine learning algorithms to improve system performance.</li>
-                    <li>Collaborated with the technical team to integrate models into existing infrastructure.</li>
-                    <li>Used TensorFlow and PyTorch for building predictive models.</li>
-                </ul>
-            </li>
-            <li><strong>AI Engineer</strong> at 3D Smart Factory (Aug 2024 -- Sep 2024)
-                <ul>
-                    <li>Designed and developed a deep learning system for 3D dental image analysis.</li>
-                    <li>Implemented advanced CNN architectures achieving 97% classification accuracy.</li>
-                    <li>Optimized model performance and reduced inference time.</li>
-                    <li>Developed a user interface for visualizing the results.</li>
-                </ul>
-            </li>
-            <li><strong>Full-Stack Developer</strong> at Polydisciplinary Faculty (Mar 2023 -- May 2023)
-                <ul>
-                    <li>Designed and developed a web application for automatic timetable generation.</li>
-                    <li>Implemented genetic algorithms for schedule optimization.</li>
-                    <li>Used Laravel, PHP, MySQL, and JavaScript for full-stack development.</li>
-                    <li>Performed UML & Merise modeling for system design.</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+    <footer>
+        <p>&copy; 2024 Abdellah Ennajari. All rights reserved.</p>
+    </footer>
 
-    <div class="section">
-        <h2>Technical Skills</h2>
-        <div class="skills">
-            <div>Artificial Intelligence</div>
-            <div>Frameworks & Libraries</div>
-            <div>Programming Languages</div>
-            <div>Databases</div>
-            <div>Development Tools</div>
-            <div>Web Development</div>
-            <div>Methodologies</div>
-        </div>
-    </div>
-
-    <div class="section">
-        <h2>Personal Projects</h2>
-        <ul>
-            <li><strong>Real-Time Flower Recognition System</strong> (May 2024 -- Aug 2024)
-                <ul>
-                    <li>Developed a multi-class CNN classification model using TensorFlow.</li>
-                    <li>Integrated an interactive user interface with Streamlit.</li>
-                    <li>Optimized performance for real-time processing.</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Certifications & Trainings</h2>
-        <ul>
-            <li><strong>French Language Proficiency Test</strong> (Aug 2023) - Level B2</li>
-            <li><strong>Web Development Bootcamp</strong> (Jul 2023) - Participation Certificate</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Soft Skills</h2>
-        <ul>
-            <li>Leadership</li>
-            <li>Project Management</li>
-            <li>Complex Problem-Solving</li>
-            <li>Communication</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Language Skills</h2>
-        <ul>
-            <li>Arabic (Native)</li>
-            <li>French (B2)</li>
-            <li>English (B1)</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Extracurricular Activities</h2>
-        <ul>
-            <li>Active member of the AI student association at ENIAD Berkane</li>
-            <li>Regular participation in hackathons and data science competitions</li>
-            <li>Technological watch on AI and deep learning innovations</li>
-        </ul>
-    </div>
-</div>
-
+    <script src="js/main.js"></script>
 </body>
 </html>
