--- a/index.html
+++ b/index.html
@@ -3,69 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abdellah Ennajari - AI Engineer</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <title>Projects - Abdellah Ennajari</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <script src="js/main.js" defer></script>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="nav-brand">Abdellah Ennajari</div>
-        <ul class="nav-links">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </nav>
-
-    <main class="hero">
+    <!-- Navbar remains the same -->
+    
+    <div class="projects-hero">
+        <div id="particles-js"></div>
         <div class="hero-content">
-            <img src="images/profile.jpg" alt="Abdellah Ennajari" class="profile-image">
-            <h1>Abdellah Ennajari</h1>
-            <h2>Machine Learning Engineer</h2>
-            <p class="hero-text">
-                Passionate AI professional with expertise in deep learning and data science, 
-                developing innovative solutions in machine learning and 3D image processing.
-            </p>
-            <div class="cta-buttons">
-                <a href="projects.html" class="btn primary">View Projects</a>
-                <a href="contact.html" class="btn secondary">Contact Me</a>
-            </div>
+            <h1 data-aos="fade-up">My Projects</h1>
+            <p data-aos="fade-up" data-aos-delay="200">Exploring the frontiers of AI and Machine Learning</p>
         </div>
-    </main>
+    </div>
 
-    <section class="skills-highlight">
-        <h2>Technical Expertise</h2>
-        <div class="skills-grid">
-            <div class="skill-card">
-                <h3>AI & ML</h3>
-                <p>Deep Learning, Computer Vision, NLP</p>
+    <section class="projects-section">
+        <div class="project-filters" data-aos="fade-up">
+            <button class="filter-btn active" data-filter="all">All Projects</button>
+            <button class="filter-btn" data-filter="ai-ml">AI/ML</button>
+            <button class="filter-btn" data-filter="computer-vision">Computer Vision</button>
+            <button class="filter-btn" data-filter="nlp">NLP</button>
+            <button class="filter-btn" data-filter="web">Web Development</button>
+        </div>
+
+        <div class="projects-grid">
+            <!-- Real-Time Flower Recognition Project -->
+            <div class="project-card" data-category="ai-ml computer-vision" data-aos="fade-up">
+                <img src="images/projects/flower-recognition.jpg" alt="Flower Recognition">
+                <div class="project-overlay">
+                    <div class="project-content">
+                        <h3>Real-Time Flower Recognition</h3>
+                        <p>A multi-class CNN classification system using TensorFlow and Streamlit for real-time flower species identification.</p>
+                        <div class="tech-stack">
+                            <span>TensorFlow</span>
+                            <span>CNN</span>
+                            <span>Streamlit</span>
+                            <span>Python</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="btn primary">Live Demo</a>
+                            <a href="https://github.com/ennajari/flower-recognition" class="btn secondary">
+                                <i class="fab fa-github"></i> Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="skill-card">
-                <h3>Frameworks</h3>
-                <p>TensorFlow, PyTorch, Scikit-learn</p>
+
+            <!-- 3D Dental Image Analysis Project -->
+            <div class="project-card" data-category="ai-ml computer-vision" data-aos="fade-up">
+                <img src="images/projects/dental-analysis.jpg" alt="Dental Analysis">
+                <div class="project-overlay">
+                    <div class="project-content">
+                        <h3>3D Dental Image Analysis</h3>
+                        <p>Deep learning system for analyzing 3D dental images with 97% classification accuracy.</p>
+                        <div class="tech-stack">
+                            <span>PyTorch</span>
+                            <span>3D CNN</span>
+                            <span>Medical Imaging</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="btn primary">Case Study</a>
+                            <a href="#" class="btn secondary">
+                                <i class="fab fa-github"></i> Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="skill-card">
-                <h3>Languages</h3>
-                <p>Python, Java, C++</p>
-            </div>
+
+            <!-- Add more project cards as needed -->
         </div>
     </section>
 
-    <footer>
-        <div class="social-links">
-            <a href="https://www.linkedin.com/in/ennajari-abdellah" target="_blank">LinkedIn</a>
-            <a href="https://github.com/ennajari" target="_blank">GitHub</a>
+    <div id="project-modal" class="modal">
+        <div class="modal-content">
+            <!-- Project details will be dynamically inserted here -->
         </div>
-        <p>&copy; 2024 Abdellah Ennajari. All rights reserved.</p>
-    </footer>
+        <button class="modal-close">&times;</button>
+    </div>
+
+    <!-- Footer remains the same -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
